@@ -1,9 +1,13 @@
 StarSpan ChangeLog
 $Id$
 
+
+2008-04-21
+    - New starspan_grass.cc: preliminaries for providing a GRASS interface.
+    
 2008-04-18
-    - New starspan_rasterize.cc: Under testing, Search for "2008-04-18"
-      in source code for temporary diagnostic statements.
+    - New starspan_rasterize.cc: goal: do some basic comparisons with the
+      output generated by GRASS' v.to.rast.
 
 2008-04-17
     - Code cleanup:
